--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             --s-sym: 26px;
             --s-nam: 13px;
             --s-mas: 11px;
+            --s-ox: 10px; /* Размер для степеней окисления */
         }
 
         body { font-family: var(--f-main); background: #fff; padding: 20px; color: #000; }
@@ -22,11 +23,10 @@
         .c-item { display: flex; flex-direction: column; gap: 5px; font-size: 12px; font-weight: bold; }
         input[type="range"] { width: 130px; }
 
-        /* Сетка: 1 для номера + 8 для групп */
         #table-area {
             display: grid;
             grid-template-columns: 50px repeat(8, 120px);
-            grid-template-rows: 40px repeat(15, minmax(80px, auto));
+            grid-template-rows: 40px repeat(15, minmax(100px, auto)); /* Увеличил высоту для вместимости */
             background: white;
             padding: 20px;
             width: fit-content;
@@ -35,12 +35,13 @@
         .h-col { font-weight: bold; font-size: 22px; color: #ccc; border-bottom: 1px solid #eee; text-align: center; }
         .h-row { display: flex; align-items: center; justify-content: center; color: #ddd; font-weight: bold; border-right: 2px solid #f9f9f9; font-size: 18px; }
 
-        .cell { display: flex; flex-direction: column; align-items: flex-start; text-align: left; padding: 8px; }
+        .cell { display: flex; flex-direction: column; align-items: flex-start; text-align: left; padding: 8px; position: relative; }
         
-        /* Контейнер для триад в 8-м столбике */
         .stack { display: flex; flex-direction: column; gap: 15px; width: 100%; }
 
+        .sym-row { display: flex; align-items: flex-start; gap: 4px; }
         .sym { font-size: var(--s-sym); font-weight: bold; line-height: 1; margin-bottom: 4px; }
+        .ox { font-size: var(--s-ox); color: #d63031; font-weight: bold; line-height: 1; margin-top: 2px; }
         .nam { font-size: var(--s-nam); line-height: 1.1; }
         .mas { font-size: var(--s-mas); color: #666; margin-top: 2px; }
 
@@ -54,6 +55,7 @@
     <div class="c-item">Символ: <input type="range" min="10" max="70" value="26" oninput="upd('sym', this.value)"></div>
     <div class="c-item">Название: <input type="range" min="8" max="40" value="13" oninput="upd('nam', this.value)"></div>
     <div class="c-item">Масса: <input type="range" min="8" max="40" value="11" oninput="upd('mas', this.value)"></div>
+    <div class="c-item">Окисление: <input type="range" min="6" max="30" value="10" oninput="upd('ox', this.value)"></div>
     <button class="dl" onclick="save()">Скачать JPG</button>
 </div>
 
@@ -67,44 +69,39 @@
 <script>
     const upd = (t, v) => document.documentElement.style.setProperty(`--s-${t}`, v + 'px');
 
-    // База элементов [Символ, Название, Масса, Группа, Ряд]
+    // База элементов [Символ, Название, Масса, Группа, Ряд, IsTriad, Степени окисления]
     const elements = [
-        ["H", "водород", "1.008", 1, 1], ["He", "гелий", "4.002", 8, 1],
-        ["Li", "литий", "6.94", 1, 2], ["Be", "бериллий", "9.01", 2, 2], ["B", "бор", "10.81", 3, 2], ["C", "углерод", "12.01", 4, 2], ["N", "азот", "14.00", 5, 2], ["O", "кислород", "15.99", 6, 2], ["F", "фтор", "18.99", 7, 2], ["Ne", "неон", "20.18", 8, 2],
-        ["Na", "натрий", "22.99", 1, 3], ["Mg", "магний", "24.30", 2, 3], ["Al", "алюминий", "26.98", 3, 3], ["Si", "кремний", "28.08", 4, 3], ["P", "фосфор", "30.97", 5, 3], ["S", "сера", "32.06", 6, 3], ["Cl", "хлор", "35.45", 7, 3], ["Ar", "аргон", "39.94", 8, 3],
+        ["H", "водород", "1.008", 1, 1, false, "+1, -1"], ["He", "гелий", "4.002", 8, 1, false, "0"],
+        ["Li", "литий", "6.94", 1, 2, false, "+1"], ["Be", "бериллий", "9.01", 2, 2, false, "+2"], ["B", "бор", "10.81", 3, 2, false, "+3"], ["C", "углерод", "12.01", 4, 2, false, "+4, -4"], ["N", "азот", "14.00", 5, 2, false, "+5...-3"], ["O", "кислород", "15.99", 6, 2, false, "-2"], ["F", "фтор", "18.99", 7, 2, false, "-1"], ["Ne", "неон", "20.18", 8, 2, false, "0"],
+        ["Na", "натрий", "22.99", 1, 3, false, "+1"], ["Mg", "магний", "24.30", 2, 3, false, "+2"], ["Al", "алюминий", "26.98", 3, 3, false, "+3"], ["Si", "кремний", "28.08", 4, 3, false, "+4, -4"], ["P", "фосфор", "30.97", 5, 3, false, "+5, +3, -3"], ["S", "сера", "32.06", 6, 3, false, "+6, +4, -2"], ["Cl", "хлор", "35.45", 7, 3, false, "+7...-1"], ["Ar", "аргон", "39.94", 8, 3, false, "0"],
         
-        // Ряды 4-5
-        ["K", "калий", "39.09", 1, 4], ["Ca", "кальций", "40.07", 2, 4], ["Sc", "скандий", "44.95", 3, 4], ["Ti", "титан", "47.86", 4, 4], ["V", "ванадий", "50.94", 5, 4], ["Cr", "хром", "51.99", 6, 4], ["Mn", "марганец", "54.93", 7, 4],
+        ["K", "калий", "39.09", 1, 4, false, "+1"], ["Ca", "кальций", "40.07", 2, 4, false, "+2"], ["Sc", "скандий", "44.95", 3, 4, false, "+3"], ["Ti", "титан", "47.86", 4, 4, false, "+4, +3"], ["V", "ванадий", "50.94", 5, 4, false, "+5, +4, +3, +2"], ["Cr", "хром", "51.99", 6, 4, false, "+6, +3, +2"], ["Mn", "марганец", "54.93", 7, 4, false, "+7, +6, +4, +2"],
         ["Fe, Co, Ni", "", "", 8, 4, true],
-        ["Cu", "медь", "63.54", 1, 5], ["Zn", "цинк", "65.38", 2, 5], ["Ga", "галлий", "69.72", 3, 5], ["Ge", "германий", "72.63", 4, 5], ["As", "мышьяк", "74.92", 5, 5], ["Se", "селен", "78.97", 6, 5], ["Br", "бром", "79.90", 7, 5], ["Kr", "криптон", "83.79", 8, 5],
+        ["Cu", "медь", "63.54", 1, 5, false, "+2, +1"], ["Zn", "цинк", "65.38", 2, 5, false, "+2"], ["Ga", "галлий", "69.72", 3, 5, false, "+3"], ["Ge", "германий", "72.63", 4, 5, false, "+4"], ["As", "мышьяк", "74.92", 5, 5, false, "+5, +3, -3"], ["Se", "селен", "78.97", 6, 5, false, "+6, +4, -2"], ["Br", "бром", "79.90", 7, 5, false, "+5, +1, -1"], ["Kr", "криптон", "83.79", 8, 5, false, "0"],
 
-        // Ряды 6-7
-        ["Rb", "рубидий", "85.46", 1, 6], ["Sr", "стронций", "87.62", 2, 6], ["Y", "иттрий", "88.90", 3, 6], ["Zr", "цирконий", "91.22", 4, 6], ["Nb", "ниобий", "92.90", 5, 6], ["Mo", "молибден", "95.95", 6, 6], ["Tc", "технеций", "98", 7, 6],
+        ["Rb", "рубидий", "85.46", 1, 6, false, "+1"], ["Sr", "стронций", "87.62", 2, 6, false, "+2"], ["Y", "иттрий", "88.90", 3, 6, false, "+3"], ["Zr", "цирконий", "91.22", 4, 6, false, "+4"], ["Nb", "ниобий", "92.90", 5, 6, false, "+5, +4"], ["Mo", "молибден", "95.95", 6, 6, false, "+6...0"], ["Tc", "технеций", "98", 7, 6, false, "+7, +6, +4"],
         ["Ru, Rh, Pd", "", "", 8, 6, true],
-        ["Ag", "серебро", "107.8", 1, 7], ["Cd", "кадмий", "112.4", 2, 7], ["In", "индий", "114.8", 3, 7], ["Sn", "олово", "118.7", 4, 7], ["Sb", "сурьма", "121.7", 5, 7], ["Te", "теллур", "127.6", 6, 7], ["I", "йод", "126.9", 7, 7], ["Xe", "ксенон", "131.2", 8, 7],
+        ["Ag", "серебро", "107.8", 1, 7, false, "+1"], ["Cd", "кадмий", "112.4", 2, 7, false, "+2"], ["In", "индий", "114.8", 3, 7, false, "+3"], ["Sn", "олово", "118.7", 4, 7, false, "+4, +2"], ["Sb", "сурьма", "121.7", 5, 7, false, "+5, +3, -3"], ["Te", "теллур", "127.6", 6, 7, false, "+6, +4, -2"], ["I", "йод", "126.9", 7, 7, false, "+7...-1"], ["Xe", "ксенон", "131.2", 8, 7, false, "0"],
 
-        // Ряды 8-9
-        ["Cs", "цезий", "132.9", 1, 8], ["Ba", "барий", "137.3", 2, 8], ["La*", "лантан", "138.9", 3, 8], ["Hf", "гафний", "178.4", 4, 8], ["Ta", "тантал", "180.9", 5, 8], ["W", "вольфрам", "183.8", 6, 8], ["Re", "рений", "186.2", 7, 8],
+        ["Cs", "цезий", "132.9", 1, 8, false, "+1"], ["Ba", "барий", "137.3", 2, 8, false, "+2"], ["La*", "лантан", "138.9", 3, 8, false, "+3"], ["Hf", "гафний", "178.4", 4, 8, false, "+4"], ["Ta", "тантал", "180.9", 5, 8, false, "+5"], ["W", "вольфрам", "183.8", 6, 8, false, "+6...0"], ["Re", "рений", "186.2", 7, 8, false, "+7, +6, +4"],
         ["Os, Ir, Pt", "", "", 8, 8, true],
-        ["Au", "золото", "196.9", 1, 9], ["Hg", "ртуть", "200.5", 2, 9], ["Tl", "таллий", "204.3", 3, 9], ["Pb", "свинец", "207.2", 4, 9], ["Bi", "висмут", "208.9", 5, 9], ["Po", "полоний", "209", 6, 9], ["At", "астат", "210", 7, 9], ["Rn", "радон", "222", 8, 9],
+        ["Au", "золото", "196.9", 1, 9, false, "+3, +1"], ["Hg", "ртуть", "200.5", 2, 9, false, "+2, +1"], ["Tl", "таллий", "204.3", 3, 9, false, "+3, +1"], ["Pb", "свинец", "207.2", 4, 9, false, "+4, +2"], ["Bi", "висмут", "208.9", 5, 9, false, "+5, +3"], ["Po", "полоний", "209", 6, 9, false, "+4, +2"], ["At", "астат", "210", 7, 9, false, "+1, -1"], ["Rn", "радон", "222", 8, 9, false, "0"],
 
-        // Ряд 10 (7-й период): ДОЗАПОЛНЕНО
-        ["Fr", "франций", "223", 1, 10], ["Ra", "радий", "226", 2, 10], ["Ac**", "актиний", "227", 3, 10],
-        ["Rf", "резерфордий", "267", 4, 10], ["Db", "дубний", "268", 5, 10], ["Sg", "сиборгий", "269", 6, 10], ["Bh", "борий", "270", 7, 10],
+        ["Fr", "франций", "223", 1, 10, false, "+1"], ["Ra", "радий", "226", 2, 10, false, "+2"], ["Ac**", "актиний", "227", 3, 10, false, "+3"],
+        ["Rf", "резерфордий", "267", 4, 10, false, "+4"], ["Db", "дубний", "268", 5, 10, false, "+5"], ["Sg", "сиборгий", "269", 6, 10, false, "+6"], ["Bh", "борий", "270", 7, 10, false, "+7"],
         ["Hs, Mt, Ds", "", "", 8, 10, true]
     ];
 
     const triads = {
-        "Fe, Co, Ni": [["Fe", "железо", "55.8"], ["Co", "кобальт", "58.9"], ["Ni", "никель", "58.6"]],
-        "Ru, Rh, Pd": [["Ru", "рутений", "101.0"], ["Rh", "родий", "102.9"], ["Pd", "палладий", "106.4"]],
-        "Os, Ir, Pt": [["Os", "осмий", "190.2"], ["Ir", "иридий", "192.2"], ["Pt", "платина", "195.0"]],
-        "Hs, Mt, Ds": [["Hs", "хассий", "277"], ["Mt", "мейтнерий", "278"], ["Ds", "дармштадтий", "281"]]
+        "Fe, Co, Ni": [["Fe", "железо", "55.8", "+3, +2"], ["Co", "кобальт", "58.9", "+3, +2"], ["Ni", "никель", "58.6", "+2"]],
+        "Ru, Rh, Pd": [["Ru", "рутений", "101.0", "+8...0"], ["Rh", "родий", "102.9", "+4, +3"], ["Pd", "палладий", "106.4", "+4, +2"]],
+        "Os, Ir, Pt": [["Os", "осмий", "190.2", "+8...0"], ["Ir", "иридий", "192.2", "+4, +3"], ["Pt", "платина", "195.0", "+4, +2"]],
+        "Hs, Mt, Ds": [["Hs", "хассий", "277", "+8"], ["Mt", "мейтнерий", "278", "+3"], ["Ds", "дармштадтий", "281", "+2"]]
     };
 
     const container = document.getElementById('table-area');
 
     function render() {
-        // Ряды 1-15
         for (let r = 1; r <= 15; r++) {
             const num = document.createElement('div');
             num.className = 'h-row';
@@ -125,12 +122,24 @@
                 st.className = 'stack';
                 triads[item[0]].forEach(t => {
                     const d = document.createElement('div');
-                    d.innerHTML = `<div class="sym">${t[0]}</div><div class="nam">${t[1].toLowerCase()}</div><div class="mas">${t[2]}</div>`;
+                    d.innerHTML = `
+                        <div class="sym-row">
+                            <div class="sym">${t[0]}</div>
+                            <div class="ox">${t[3]}</div>
+                        </div>
+                        <div class="nam">${t[1].toLowerCase()}</div>
+                        <div class="mas">${t[2]}</div>`;
                     st.appendChild(d);
                 });
                 cell.appendChild(st);
             } else {
-                cell.innerHTML = `<div class="sym">${item[0]}</div><div class="nam">${item[1].toLowerCase()}</div><div class="mas">${item[2]}</div>`;
+                cell.innerHTML = `
+                    <div class="sym-row">
+                        <div class="sym">${item[0]}</div>
+                        <div class="ox">${item[6] || ''}</div>
+                    </div>
+                    <div class="nam">${item[1].toLowerCase()}</div>
+                    <div class="mas">${item[2]}</div>`;
             }
             container.appendChild(cell);
         });
