--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Mendeleev Ultimate Final</title>
+    <title>Mendeleev Rounded</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
@@ -89,21 +89,23 @@
     const upd = (t, v) => document.documentElement.style.setProperty(`--s-${t}`, v + 'px');
     let maxCols = 9, maxRows = 10;
     
+    // МАССЫ ОКРУГЛЕНЫ ДО ЦЕЛЫХ (КРОМЕ ХЛОРА)
     let elements = [
-        ["H", "водород", "1.008", 1, 1, false, "+1/-1"], ["He", "гелий", "4.002", 8, 1, false, "0"],
-        ["Li", "литий", "6.94", 1, 2, false, "+1"], ["Be", "бериллий", "9.01", 2, 2, false, "+2"], ["B", "бор", "10.81", 3, 2, false, "+3"], ["C", "углерод", "12.01", 4, 2, false, "-4"], ["N", "азот", "14.00", 5, 2, false, "-3"], ["O", "кислород", "15.99", 6, 2, false, "-2"], ["F", "фтор", "18.99", 7, 2, false, "-1"], ["Ne", "неон", "20.18", 8, 2, false, "0"],
-        ["Na", "натрий", "22.99", 1, 3, false, "+1"], ["Mg", "магний", "24.30", 2, 3, false, "+2"], ["Al", "алюминий", "26.98", 3, 3, false, "+3"], ["Si", "кремний", "28.08", 4, 3, false, "-4"], ["P", "фосфор", "30.97", 5, 3, false, "-3"], ["S", "сера", "32.06", 6, 3, false, "-2"], ["Cl", "хлор", "35.45", 7, 3, false, "-1"], ["Ar", "аргон", "39.94", 8, 3, false, "0"],
-        ["K", "калий", "39.09", 1, 4, false, "+1"], ["Ca", "кальций", "40.07", 2, 4, false, "+2"], ["Sc", "скандий", "44.95", 3, 4, false, "+3"], ["Ti", "титан", "47.86", 4, 4, false, "+4"], ["V", "ванадий", "50.94", 5, 4, false, "+5"], ["Cr", "хром", "51.99", 6, 4, false, "+3"], ["Mn", "марганец", "54.93", 7, 4, false, "+2"],
+        ["H", "водород", "1", 1, 1, false, "+1/-1"], ["He", "гелий", "4", 8, 1, false, "0"],
+        ["Li", "литий", "7", 1, 2, false, "+1"], ["Be", "бериллий", "9", 2, 2, false, "+2"], ["B", "бор", "11", 3, 2, false, "+3"], ["C", "углерод", "12", 4, 2, false, "-4"], ["N", "азот", "14", 5, 2, false, "-3"], ["O", "кислород", "16", 6, 2, false, "-2"], ["F", "фтор", "19", 7, 2, false, "-1"], ["Ne", "неон", "20", 8, 2, false, "0"],
+        ["Na", "натрий", "23", 1, 3, false, "+1"], ["Mg", "магний", "24", 2, 3, false, "+2"], ["Al", "алюминий", "27", 3, 3, false, "+3"], ["Si", "кремний", "28", 4, 3, false, "-4"], ["P", "фосфор", "31", 5, 3, false, "-3"], ["S", "сера", "32", 6, 3, false, "-2"], ["Cl", "хлор", "35.5", 7, 3, false, "-1"], ["Ar", "аргон", "40", 8, 3, false, "0"],
+        ["K", "калий", "39", 1, 4, false, "+1"], ["Ca", "кальций", "40", 2, 4, false, "+2"], ["Sc", "скандий", "45", 3, 4, false, "+3"], ["Ti", "титан", "48", 4, 4, false, "+4"], ["V", "ванадий", "51", 5, 4, false, "+5"], ["Cr", "хром", "52", 6, 4, false, "+3"], ["Mn", "марганец", "55", 7, 4, false, "+2"],
         ["Fe, Co, Ni", "", "", 8, 4, true],
-        ["Cu", "медь", "63.54", 1, 5, false, "+2"], ["Zn", "цинк", "65.38", 2, 5, false, "+2"], ["Ga", "галлий", "69.72", 3, 5, false, "+3"], ["Ge", "германий", "72.63", 4, 5, false, "-4"], ["As", "мышьяк", "74.92", 5, 5, false, "-3"], ["Se", "селен", "78.97", 6, 5, false, "-2"], ["Br", "бром", "79.90", 7, 5, false, "-1"], ["Kr", "криптон", "83.79", 8, 5, false, "0"],
-        ["Rb", "рубидий", "85.46", 1, 6, false, "+1"], ["Sr", "стронций", "87.62", 2, 6, false, "+2"], ["Y", "иттрий", "88.90", 3, 6, false, "+3"], ["Zr", "цирконий", "91.22", 4, 6, false, "+4"], ["Nb", "ниобий", "92.90", 5, 6, false, "+5"], ["Mo", "молибден", "95.95", 6, 6, false, "+6"], ["Tc", "технеций", "98", 7, 6, false, "+7"],
+        ["Cu", "медь", "64", 1, 5, false, "+2"], ["Zn", "цинк", "65", 2, 5, false, "+2"], ["Ga", "галлий", "70", 3, 5, false, "+3"], ["Ge", "германий", "73", 4, 5, false, "-4"], ["As", "мышьяк", "75", 5, 5, false, "-3"], ["Se", "селен", "79", 6, 5, false, "-2"], ["Br", "бром", "80", 7, 5, false, "-1"], ["Kr", "криптон", "84", 8, 5, false, "0"],
+        ["Rb", "рубидий", "85", 1, 6, false, "+1"], ["Sr", "стронций", "88", 2, 6, false, "+2"], ["Y", "иттрий", "89", 3, 6, false, "+3"], ["Zr", "цирконий", "91", 4, 6, false, "+4"], ["Nb", "ниобий", "93", 5, 6, false, "+5"], ["Mo", "молибден", "96", 6, 6, false, "+6"], ["Tc", "технеций", "98", 7, 6, false, "+7"],
         ["Ru, Rh, Pd", "", "", 8, 6, true],
-        ["Ag", "серебро", "107.8", 1, 7, false, "+1"], ["Cd", "кадмий", "112.4", 2, 7, false, "+2"], ["In", "индий", "114.8", 3, 7, false, "+3"], ["Sn", "олово", "118.7", 4, 7, false, "+4"], ["Sb", "сурьма", "121.7", 5, 7, false, "-3"], ["Te", "теллур", "127.6", 6, 7, false, "-2"], ["I", "йод", "126.9", 7, 7, false, "-1"], ["Xe", "ксенон", "131.2", 8, 7, false, "0"],
-        ["Cs", "цезий", "132.9", 1, 8, false, "+1"], ["Ba", "барий", "137.3", 2, 8, false, "+2"], ["La*", "лантан", "138.9", 3, 8, false, "+3"], ["Hf", "гафний", "178.4", 4, 8, false, "+4"], ["Ta", "тантал", "180.9", 5, 8, false, "+5"], ["W", "вольфрам", "183.8", 6, 8, false, "+6"], ["Re", "рений", "186.2", 7, 8, false, "+7"],
+        ["Ag", "серебро", "108", 1, 7, false, "+1"], ["Cd", "кадмий", "112", 2, 7, false, "+2"], ["In", "индий", "115", 3, 7, false, "+3"], ["Sn", "олово", "119", 4, 7, false, "+4"], ["Sb", "сурьма", "122", 5, 7, false, "-3"], ["Te", "теллур", "128", 6, 7, false, "-2"], ["I", "йод", "127", 7, 7, false, "-1"], ["Xe", "ксенон", "131", 8, 7, false, "0"],
+        ["Cs", "цезий", "133", 1, 8, false, "+1"], ["Ba", "барий", "137", 2, 8, false, "+2"], ["La*", "лантан", "139", 3, 8, false, "+3"], ["Hf", "гафний", "178", 4, 8, false, "+4"], ["Ta", "тантал", "181", 5, 8, false, "+5"], ["W", "вольфрам", "184", 6, 8, false, "+6"], ["Re", "рений", "186", 7, 8, false, "+7"],
         ["Os, Ir, Pt", "", "", 8, 8, true],
-        ["Au", "золото", "196.9", 1, 9, false, "+3"], ["Hg", "ртуть", "200.5", 2, 9, false, "+2"], ["Tl", "таллий", "204.3", 3, 9, false, "+3"], ["Pb", "свинец", "207.2", 4, 9, false, "+2"], ["Bi", "висмут", "208.9", 5, 9, false, "+3"], ["Po", "полоний", "209", 6, 9, false, "+4"], ["At", "астат", "210", 7, 9, false, "-1"], ["Rn", "радон", "222", 8, 9, false, "0"],
+        ["Au", "золото", "197", 1, 9, false, "+3"], ["Hg", "ртуть", "201", 2, 9, false, "+2"], ["Tl", "таллий", "204", 3, 9, false, "+3"], ["Pb", "свинец", "207", 4, 9, false, "+2"], ["Bi", "висмут", "209", 5, 9, false, "+3"], ["Po", "полоний", "209", 6, 9, false, "+4"], ["At", "астат", "210", 7, 9, false, "-1"], ["Rn", "радон", "222", 8, 9, false, "0"],
         ["Fr", "франций", "223", 1, 10, false, "+1"], ["Ra", "радий", "226", 2, 10, false, "+2"], ["Ac**", "актиний", "227", 3, 10, false, "+3"], ["Rf", "резерфордий", "267", 4, 10, false, "+4"], ["Db", "дубний", "268", 5, 10, false, "+5"], ["Sg", "сиборгий", "269", 6, 10, false, "+6"], ["Bh", "борий", "270", 7, 10, false, "+7"],
         ["Hs, Mt, Ds", "", "", 8, 10, true],
+        // Кислоты
         ["NO<sub>2</sub><sup>-</sup>", "нитриты", "азотистая", 9, 1, false, ""],
         ["NO<sub>3</sub><sup>-</sup>", "нитраты", "азотная", 9, 2, false, ""],
         ["Cl<sup>-</sup>", "хлориды", "хлороводородная", 9, 3, false, ""],
@@ -116,9 +118,9 @@
     ];
 
     const triads = {
-        "Fe, Co, Ni": [["Fe", "железо", "55.8", "+3"], ["Co", "кобальт", "58.9", "+2"], ["Ni", "никель", "58.6", "+2"]],
-        "Ru, Rh, Pd": [["Ru", "рутений", "101.0", "+4"], ["Rh", "родий", "102.9", "+3"], ["Pd", "палладий", "106.4", "+2"]],
-        "Os, Ir, Pt": [["Os", "осмий", "190.2", "+4"], ["Ir", "иридий", "192.2", "+4"], ["Pt", "платина", "195.0", "+4"]],
+        "Fe, Co, Ni": [["Fe", "железо", "56", "+3"], ["Co", "кобальт", "59", "+2"], ["Ni", "никель", "59", "+2"]],
+        "Ru, Rh, Pd": [["Ru", "рутений", "101", "+4"], ["Rh", "родий", "103", "+3"], ["Pd", "палладий", "106", "+2"]],
+        "Os, Ir, Pt": [["Os", "осмий", "190", "+4"], ["Ir", "иридий", "192", "+4"], ["Pt", "платина", "195", "+4"]],
         "Hs, Mt, Ds": [["Hs", "хассий", "277", "+4"], ["Mt", "мейтнерий", "278", "+3"], ["Ds", "дармштадтий", "281", "+2"]]
     };
 
@@ -140,7 +142,7 @@
                 cell.onclick = () => openEdit(c, r);
                 const el = elements.find(e => e[3] === c && e[4] === r);
                 if (el) {
-                    if (el[5]) { // ЛОГИКА ТРИАД С МАССОЙ
+                    if (el[5]) {
                         const st = document.createElement('div'); st.className = 'stack';
                         triads[el[0]].forEach(t => {
                             st.innerHTML += `<div class="stack-el">
@@ -165,9 +167,9 @@
     function openEdit(c, r) { currentEditPos = { col: c, row: r }; const el = elements.find(e => e[3] === c && e[4] === r); document.getElementById('ed-sym').value = el ? el[0] : ''; document.getElementById('ed-nam').value = el ? el[1] : ''; document.getElementById('ed-mas').value = el ? el[2] : ''; document.getElementById('ed-ox').value = el ? (el[6] || '') : ''; document.getElementById('modal-ov').style.display = 'block'; }
     function closeModal() { document.getElementById('modal-ov').style.display = 'none'; }
     function applyEdit() { const sym = document.getElementById('ed-sym').value; elements = elements.filter(e => !(e[3] === currentEditPos.col && e[4] === currentEditPos.row)); if (sym) elements.push([sym, document.getElementById('ed-nam').value, document.getElementById('ed-mas').value, currentEditPos.col, currentEditPos.row, false, document.getElementById('ed-ox').value]); render(); closeModal(); }
-    function saveConfig() { const b = new Blob([JSON.stringify({maxCols, maxRows, elements})], {type: 'application/json'}); const a = document.createElement('a'); a.href = URL.createObjectURL(b); a.download = 'full_config.json'; a.click(); }
+    function saveConfig() { const b = new Blob([JSON.stringify({maxCols, maxRows, elements})], {type: 'application/json'}); const a = document.createElement('a'); a.href = URL.createObjectURL(b); a.download = 'config_rounded.json'; a.click(); }
     document.getElementById('loadCfg').onchange = e => { const r = new FileReader(); r.onload = ev => { const d = JSON.parse(ev.target.result); maxCols = d.maxCols; maxRows = d.maxRows; elements = d.elements; render(); }; r.readAsText(e.target.files[0]); };
     document.getElementById('fontUp').onchange = e => { const r = new FileReader(); r.onload = ev => { const font = new FontFace('CustomFont', ev.target.result); font.load().then(l => { document.fonts.add(l); document.documentElement.style.setProperty('--f-main', 'CustomFont'); render(); }); }; r.readAsArrayBuffer(e.target.files[0]); };
-    function saveJpg() { html2canvas(container, { scale: 3 }).then(c => { const a = document.createElement('a'); a.download = 'table.jpg'; a.href = c.toDataURL("image/jpeg", 1.0); a.click(); }); }
+    function saveJpg() { html2canvas(container, { scale: 3 }).then(c => { const a = document.createElement('a'); a.download = 'table_rounded.jpg'; a.href = c.toDataURL("image/jpeg", 1.0); a.click(); }); }
     render();
 </script></body></html>
